// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test component should clickable disable 1`] = `
<main>
  <wx-view
    class="ext-class titian-cell-divider titian-cell titian-border-bottom"
    hoverClass="hover-class "
    hoverStayTime="60"
    style="align-items:center"
    bind:tap="onClick"
  >
    <wx-view
      class="title-wrap-class titian-cell-title-wrap"
      style="align-items:center"
    >
      <wx-view
        class="titian-cell-icon-box"
      />
      <wx-view>
        <wx-view
          style="display:flex;align-items:center"
        >
          <wx-view
            class="title-class titian-cell-title"
            style=""
          >
            
          title
        
          </wx-view>
        </wx-view>
      </wx-view>
    </wx-view>
    <wx-view
      class="titian-cell-desc-wrap"
    >
      <wx-view
        class="desc-content-class titian-cell-desc-content"
      />
    </wx-view>
  </wx-view>
</main>
`;

exports[`test component should ext style add success 1`] = `
<main>
  <wx-view
    class="ext-class titian-cell-divider titian-cell titian-border-bottom"
    hoverClass="hover-class "
    hoverStayTime="60"
    style="align-items:center;background-color: red;"
    bind:tap="onClick"
  >
    <wx-view
      class="title-wrap-class titian-cell-title-wrap"
      style="align-items:center"
    >
      <wx-view
        class="titian-cell-icon-box"
      />
      <wx-view>
        <wx-view
          style="display:flex;align-items:center"
        >
          <wx-view
            class="title-class titian-cell-title"
            style=""
          >
            
          title
        
          </wx-view>
        </wx-view>
      </wx-view>
    </wx-view>
    <wx-view
      class="titian-cell-desc-wrap"
    >
      <wx-view
        class="desc-content-class titian-cell-desc-content"
      />
    </wx-view>
  </wx-view>
</main>
`;

exports[`test component should render success 1`] = `
<main>
  <wx-view
    class="ext-class titian-cell-divider titian-cell titian-border-bottom"
    hoverClass="hover-class "
    hoverStayTime="60"
    style="align-items:center"
    bind:tap="onClick"
  >
    <wx-view
      class="title-wrap-class titian-cell-title-wrap"
      style="align-items:center"
    >
      <wx-view
        class="titian-cell-icon-box"
      />
      <wx-view>
        <wx-view
          style="display:flex;align-items:center"
        />
      </wx-view>
    </wx-view>
    <wx-view
      class="titian-cell-desc-wrap"
    >
      <wx-view
        class="desc-content-class titian-cell-desc-content"
      />
    </wx-view>
  </wx-view>
</main>
`;

exports[`test component should render success with required 1`] = `
<main>
  <wx-view
    class="ext-class titian-cell-divider titian-cell titian-border-bottom"
    hoverClass="hover-class "
    hoverStayTime="60"
    style="align-items:center"
    bind:tap="onClick"
  >
    <wx-view
      class="title-wrap-class titian-cell-title-wrap"
      style="align-items:center"
    >
      <wx-view
        class="titian-cell-icon-box"
      />
      <wx-view>
        <wx-view
          style="display:flex;align-items:center"
        >
          <wx-view
            class="title-class titian-cell-title"
            style=""
          >
            
          title
        
          </wx-view>
          <wx-view
            class="titian-cell-required-box"
          >
            <ti-icon
              extClass="titian-cell-required"
            >
              <wx-view
                class="titian-icon-base titian-icon titian-icon-required ext-class"
                style="font-size:24rpx"
                bind:tap="onClick"
              />
            </ti-icon>
          </wx-view>
        </wx-view>
      </wx-view>
    </wx-view>
    <wx-view
      class="titian-cell-desc-wrap"
    >
      <wx-view
        class="desc-content-class titian-cell-desc-content"
      />
    </wx-view>
  </wx-view>
</main>
`;

exports[`test component should render success with title, icon 1`] = `
<main>
  <wx-view
    class="ext-class titian-cell-divider titian-cell titian-border-bottom"
    hoverClass="hover-class "
    hoverStayTime="60"
    style="align-items:center"
    bind:tap="onClick"
  >
    <wx-view
      class="title-wrap-class titian-cell-title-wrap"
      style="align-items:center"
    >
      <wx-view
        class="titian-cell-icon-box"
      >
        <ti-icon
          extClass="titian-cell-icon"
        >
          <wx-view
            class="titian-icon-base titian-icon titian-icon-checked ext-class"
            style="font-size:36rpx"
            bind:tap="onClick"
          />
        </ti-icon>
      </wx-view>
      <wx-view>
        <wx-view
          style="display:flex;align-items:center"
        >
          <wx-view
            class="title-class titian-cell-title"
            style=""
          >
            
          title
        
          </wx-view>
        </wx-view>
      </wx-view>
    </wx-view>
    <wx-view
      class="titian-cell-desc-wrap"
    >
      <wx-view
        class="desc-content-class titian-cell-desc-content"
      />
    </wx-view>
  </wx-view>
</main>
`;

exports[`test component should render success with title, label, desc, sub-desc 1`] = `
<main>
  <wx-view
    class="ext-class titian-cell-divider titian-cell titian-border-bottom"
    hoverClass="hover-class "
    hoverStayTime="60"
    style="align-items:center"
    bind:tap="onClick"
  >
    <wx-view
      class="title-wrap-class titian-cell-title-wrap"
      style="align-items:center"
    >
      <wx-view
        class="titian-cell-icon-box"
      />
      <wx-view>
        <wx-view
          style="display:flex;align-items:center"
        >
          <wx-view
            class="title-class titian-cell-title"
            style=""
          >
            
          title
        
          </wx-view>
        </wx-view>
        <wx-view
          class="label-class titian-cell-label"
        >
          
        label
      
        </wx-view>
      </wx-view>
    </wx-view>
    <wx-view
      class="titian-cell-desc-wrap"
    >
      <wx-view
        class="desc-content-class titian-cell-desc-content"
      >
        <wx-view
          class="desc-class titian-cell-desc"
        >
          
        desc
      
        </wx-view>
      </wx-view>
      <wx-view
        class="sub-desc-class titian-cell-sub-desc"
        style=""
      >
        
      sub-desc
      
      </wx-view>
    </wx-view>
  </wx-view>
</main>
`;

exports[`test component should render success with title, right icon 1`] = `
<main>
  <wx-view
    class="ext-class titian-cell-divider titian-cell titian-border-bottom"
    hoverClass="hover-class "
    hoverStayTime="60"
    style="align-items:center"
    bind:tap="onClick"
  >
    <wx-view
      class="title-wrap-class titian-cell-title-wrap"
      style="align-items:center"
    >
      <wx-view
        class="titian-cell-icon-box"
      />
      <wx-view>
        <wx-view
          style="display:flex;align-items:center"
        >
          <wx-view
            class="title-class titian-cell-title"
            style=""
          >
            
          title
        
          </wx-view>
        </wx-view>
      </wx-view>
    </wx-view>
    <wx-view
      class="titian-cell-desc-wrap"
    >
      <wx-view
        class="desc-content-class titian-cell-desc-content"
      >
        <ti-icon
          extClass="titian-cell-right-icon"
        >
          <wx-view
            class="titian-icon-base titian-icon titian-icon-checked ext-class"
            style="font-size:28rpx"
            bind:tap="onClick"
          />
        </ti-icon>
      </wx-view>
    </wx-view>
  </wx-view>
</main>
`;

exports[`test component should render success without arrow 1`] = `
<main>
  <wx-view
    class="ext-class titian-cell-divider titian-cell titian-border-bottom"
    hoverClass="hover-class "
    hoverStayTime="60"
    style="align-items:center"
    bind:tap="onClick"
  >
    <wx-view
      class="title-wrap-class titian-cell-title-wrap"
      style="align-items:center"
    >
      <wx-view
        class="titian-cell-icon-box"
      />
      <wx-view>
        <wx-view
          style="display:flex;align-items:center"
        >
          <wx-view
            class="title-class titian-cell-title"
            style=""
          >
            
          title
        
          </wx-view>
        </wx-view>
      </wx-view>
    </wx-view>
    <wx-view
      class="titian-cell-desc-wrap"
    >
      <wx-view
        class="desc-content-class titian-cell-desc-content"
      />
    </wx-view>
  </wx-view>
</main>
`;

exports[`test component should render title width 1`] = `
<main>
  <wx-view
    class="ext-class titian-cell-divider titian-cell titian-border-bottom"
    hoverClass="hover-class "
    hoverStayTime="60"
    style="align-items:center"
    bind:tap="onClick"
  >
    <wx-view
      class="title-wrap-class titian-cell-title-wrap"
      style="align-items:center"
    >
      <wx-view
        class="titian-cell-icon-box"
      />
      <wx-view>
        <wx-view
          style="display:flex;align-items:center"
        >
          <wx-view
            class="title-class titian-cell-title"
            style="width: 168rpx"
          >
            
          测试测试测试测试测试测试测试测试测试测试测试测试
        
          </wx-view>
        </wx-view>
      </wx-view>
    </wx-view>
    <wx-view
      class="titian-cell-desc-wrap"
    >
      <wx-view
        class="desc-content-class titian-cell-desc-content"
      />
    </wx-view>
  </wx-view>
</main>
`;
